@@ -2618,7 +2618,12 @@ class newsManager extends newsLibrary {
             'TXT_NEWS_SOURCE_DESCRIPTION'               => $_ARRAYLANG['TXT_NEWS_SOURCE_DESCRIPTION'],
             'TXT_NEWS_IMAGE_DESCRIPTION'                => $_ARRAYLANG['TXT_NEWS_IMAGE_DESCRIPTION'],
             'TXT_HEADLINE_ID_DESCRIPTION'               => $_ARRAYLANG['TXT_HEADLINE_ID_DESCRIPTION'],
-            'TXT_NEWS_IMAGE_LINK_DESCRIPTION'           => $_ARRAYLANG['TXT_NEWS_IMAGE_LINK_DESCRIPTION']
+            'TXT_NEWS_IMAGE_LINK_DESCRIPTION'           => $_ARRAYLANG['TXT_NEWS_IMAGE_LINK_DESCRIPTION'],
+            'TXT_NEWS_IMAGE_SRC_DESCRIPTION'            => $_ARRAYLANG['TXT_NEWS_IMAGE_SRC_DESCRIPTION'],
+            'TXT_NEWS_IMAGE_ALT_DESCRIPTION'            => $_ARRAYLANG['TXT_NEWS_IMAGE_ALT_DESCRIPTION'],
+            'TXT_NEWS_CATEGORY_NAME_DESCRIPTION'        => $_ARRAYLANG['TXT_NEWS_CATEGORY_NAME_DESCRIPTION'],
+            'TXT_NEWS_IMAGE_ROW_DESCRIPTION'            => $_ARRAYLANG['TXT_NEWS_IMAGE_ROW_DESCRIPTION'],
+            'TXT_NEWS_TEASER_TEXT_DESCRIPTION'          => $_ARRAYLANG['TXT_NEWS_TEASER_TEXT_DESCRIPTION']
         ));
     }
 }
